test/tests/stages/18_structures/invalid_types/invalid_member_operators/arrow_pointer_to_non_struct.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: s
        Bool: 0
        List[1]: 
          CMemberDeclaration: 
            TIdentifier: l
            Long: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: d
                  CSingleInit: 
                    CConstant: 
                      CConstDouble: 
                        TDouble: 0.000000
                      None: 
                    None: 
                  Double: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: ptr
                  CSingleInit: 
                    CAddrOf: 
                      CVar: 
                        TIdentifier: d
                        None: 
                      None: 
                    None: 
                  Pointer: 
                    Double: 
                  None: 
            CS: 
              CReturn: 
                CArrow: 
                  TIdentifier: l
                  CVar: 
                    TIdentifier: ptr
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
